feat: add wallet-page

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "http://localhost:3000",
-  "name": "TEST-TON",
+  "name": "test-ton",
   "iconUrl": "http://localhost:3000/logo.png"
 }
