--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
